--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- SEO Meta -->
+  <title>Olivér Kovács | Composer, Music Educator & Mentor</title>
+  <meta name="description" content="Olivér Kovács – composer, music educator, and creator of Composer's Compass and Ear-Genius. Learn music theory, composition, and orchestration through lessons, videos, and mentorship." />
+  <meta name="keywords" content="music composition lessons, music theory, orchestration, composer mentorship, ear training, Olivér Kovács, Composer's Compass, Ear-Genius" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Olivér Kovács | Composer, Music Educator & Mentor" />
+  <meta property="og:description" content="Learn music theory, orchestration, and composition with personalized lessons, tutorials, and tools created by composer Olivér Kovács." />
+  <meta property="og:image" content="%PUBLIC_URL%/preview.jpg" />
+  <meta property="og:url" content="https://oliverkovacs.eu" />
+  <meta property="og:site_name" content="Olivér Kovács" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Olivér Kovács | Composer, Music Educator & Mentor" />
+  <meta name="twitter:description" content="Music composition, orchestration, and mentorship with Olivér Kovács. Creator of Composer's Compass and Ear-Genius." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/preview.jpg" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="canonical" href="https://oliverkovacs.eu" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
